# yoakal_all_projects

./: .gitignore  EDA.ipynb  README.md  RNNnotebook.ipynb  master.py  notebook hahnasot.ipynb  notebook.ipynb  predocs.ipynb  program.py  pyproject.toml  split.py  yearly_forecast_vs_actual_5.csv
code/: notebook.ipynb  predocs.ipynb  rnn.ipynb  split.py
general_forecast/: master_script.py
integration_tests/: test_inference.py  test_real_data.py
kvutzut_sahar/: preprocess_data.py
re_forecast/: __init__.py
src/break_file/: __init__.py
src/config_file/: __init__.py  constants.py  template.py
src/download_file/: __init__.py
src/general_forecast/: ashbarot_model.py  clean.py  evaluate.py  hashbarot_model.py  master_script.py  models.py  preprocess_data.py  run_notebook.py  zh
src/general_forecast/Data/: zh_tuple
src/general_forecast/get_ZH_tuples/: __init__.py
src/get_client/: __init__.py
src/list_files/: __init__.py
src/re_forecast/: __init__.py  augmentation.py  config.json  globals.py  infer.py  main.py  preprocess.py  train.py  utils.py
src/read_file/: __init__.py
src/return_bucket_data/: __init__.py
src/show_templates/: __init__.py
src/signit_handle/: __init__.py
src/upload_file/: __init__.py
tests/: test_augmentation.py  test_cli.py  test_get_train_data.py  test_integration.py  test_preprocess.py  test_re_forecast.py  test_smoothing.py
yoakal_RNN_model/code/: rnn.ipynb
yoakal_bucket/: README.md  pyproject.toml
yoakal_bucket/src/config_file/: __init__.py
yoakal_bucket/src/download_file/: __init__.py
yoakal_bucket/src/remove_file/: __init__.py
yoakal_bucket/src/upload_file/: __init__.py
yoakal_mof_class_model/: pyproject.toml
yoakal_mof_class_model/src/general_forecast/: evaluate.py  hashbarot_model.py  models.py  preprocess_data.py  run_notebook.py
yoakal_re_model/: README.md  pyproject.toml
yoakal_re_model/integration_tests/: test_inference_on_real_data.py
yoakal_re_model/src/re_forecast/: augmentation.py  infer.py  main.py  train.py  utils.py
yoakal_re_model/tests/: test_augmentation.py  test_cli.py  test_get_train_data.py
yoakal_revenu_model/: README.md  yearly_forecast_vs_actual_1.csv
