[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mof-class-forecaster"
dynamic = ["version"]
dependencies = [
	"pandas",
	"numpy",
	"statsmodels",
	"scikit-learn",
	"xgboost",
    "mlflow",
	]


[project.scripts]
forecast = "general_forecast.master_script:main"
re-forecast = "re_forecast.main:main"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"


[tool.tox]
requires = ["tox>=4.19"]
env_list = ["test", "format"]


[tool.tox.env.test-ssh]
deps = ["pytest",
        "experiment-management @ git+ssh://git@github.com/MadorDS-Yoakal/experiment-management.git",
    ]
description = "Run test under {base_python}, the private dependencies are stated via SSH"
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]


[tool.tox.env.format]
description = "Run black formatter on the source code"
skip_install = true
deps = ["black"]
commands = [["black", "src"], ["black", "tests"], ["black","integration_tests"]]


[tool.tox.env.test]
deps = ["pytest",
        "experiment-management @ git+https://github.com/MadorDS-Yoakal/experiment-management.git",
    ]
description = "Run test under {base_python}"
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]


